2003-07-07  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer.c (e_msg_composer_new_with_message): Updated to
	use camel_strcase_hash/equal.

2003-07-01  Dan Winship  <danw@ximian.com>

	* e-msg-composer-attachment-bar.c (pixbuf_for_mime_type): Gone.
	(update): Use e_icon_for_mime_type instead.

	* Makefile.am (INCLUDES): remove EVOLUTION_IMAGESDIR define

2003-06-25  Antonio Xu  <antonio.xu@sun.com>

	* e-msg-composer.c (handle_mailto): Change file url to absolute
	path. Fixes bug #44065.

2003-07-01  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer.c (autosave_load_draft): Connect to the
	save-draft signal too. Fixes bug #45531.

2003-06-27  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer.c (build_message): Set the rawtext bits for the
	'plain' and 'html' data wrappers to FALSE.

2003-06-19  Larry Ewing  <lewing@ximian.com>

	* listener.c (insert_paragraph_after): free the return value.
	(impl_event): free the return value.

2003-06-17  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer.c (best_encoding): Use e_iconv_open/close so that
	we get charset aliasing for free. Fixes bug #44991.

2003-06-16  Jeffrey Stedfast  <fejj@ximian.com>

	Fixes bug #44139.

	* e-msg-composer-hdrs.c (attach_couple): Set the vertical and
	horizontal padding to 3 always.
	(create_from_optionmenu): Change the hbox spacing to 6 pixels.

	* e-msg-composer.c (create_composer): Set the border width around
	the composer's vbox to HIG specification and make the box_spacing
	6 pixels as well.

2003-06-10  Larry Ewing  <lewing@ximian.com>

	* e-msg-composer-hdrs.c (e_msg_composer_hdrs_and_string_free):
	free the structure as well.

2003-06-09  Larry Ewing  <lewing@ximian.com>

	* listener.c (insert_paragraph_before): free the return values.

2003-05-21  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer.c (composer_get_default_charset_setting): Same as
	the rest.
	(setup_ui): We didn't even seem to be using the gconf client
	here. Removed.